--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -1,4 +1,4 @@
 <mat-card *ngFor="let post of posts" class="post-card mat-elevation-z4">
   <mat-card-title>{{post.message}}</mat-card-title>
-  <mat-card-subtitle>{{post.author.username}}</mat-card-subtitle>
+  <mat-card-subtitle>{{post.created_at|date:'medium'}} | {{post.author.username}}</mat-card-subtitle>
 </mat-card>
